manifests/003-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url : "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"   
spec:
  rules:
    - host: wordpress.pilotgapps.com
      http:
        paths:
          - path: /phpmyadmin(/.*)$
            backend:
              serviceName: phpmyadmin
              servicePort: 80
          - path: /?(.*)
            backend:
              serviceName: wordpress
              servicePort: 80
